fixes list spacing

--- a/assets/css/blocks.scss
+++ b/assets/css/blocks.scss
@@ -310,6 +310,7 @@ table.two-column {
 }
 
 .filter-narrow {
+	@extend .flow-t;
 	li {
 		@extend .spread-down;
 	}
